gitops_dryrun/manifests/platform/argoconfig/workflows.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workflows
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - host: workflows.dtu-test-s17-33fd25.dynatrace.training
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workflows-argo-workflows-server
                port:
                  number: 2746
